✨ feat: 完成了权限控制模块

--- a/src/view/view.css
+++ b/src/view/view.css
@@ -23,3 +23,10 @@
 .marginBottom{
   margin-bottom: 2%;
 }
+.columnsStyle{
+  display: flex;
+  flex-direction: column;
+}
+.columnsStyle span{
+  padding: 3px;
+}
