--- a/src/view/view.css
+++ b/src/view/view.css
@@ -25,6 +25,9 @@
 .marginBottom{
   margin-bottom: 2%;
 }
+.marginTop{
+  margin-top: 2%;
+}
 .columnsStyle{
   display: flex;
   flex-direction: column;
